--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
   },
