--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jkninja238.github.io/react-snek",
+  "homepage": "https://jkalombro.github.io/react-snek",
   "name": "react-snek2",
   "version": "0.1.0",
   "private": true,
